--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,11 @@ header {
     right: 0;
 }
 
-.Icone2 {
-    animation: movaIcone2 4s ease-in-out infinite alternate
+.onda1 {
+    animation: movaOnda1 4s ease-in-out infinite alternate
 }
 
-@keyframes movaIcone2 {
+@keyframes movaOnda1 {
     from {
         transform: translate(15px, 15px)
     }
@@ -26,16 +26,16 @@ header {
     }
 }
 
-.Icone {
-    animation: movaIcone 2s ease-in-out infinite alternate
+.onda2 {
+    animation: movaOnda2 2s ease-in-out infinite alternate
 }
 
-@keyframes movaIcone {
+@keyframes movaOnda2 {
     from {
-        transform: translate(10px, 10px)
+        transform: translate(-10px, 5px)
     }
     to {
-        transform: translate(0, -5px)
+        transform: translate(0, 0px)
     }
 }
 
