--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,30 +13,17 @@ header {
     right: 0;
 }
 
-.onda1 {
-    animation: movaOnda1 4s ease-in-out infinite alternate
+::-webkit-scrollbar {
+    width: 10px;
 }
 
-@keyframes movaOnda1 {
-    from {
-        transform: translate(15px, 15px)
-    }
-    to {
-        transform: translate(0, 0px)
-    }
+::-webkit-scrollbar-track {
+    background: #27272a;
 }
 
-.onda2 {
-    animation: movaOnda2 2s ease-in-out infinite alternate
-}
-
-@keyframes movaOnda2 {
-    from {
-        transform: translate(-10px, 5px)
-    }
-    to {
-        transform: translate(0, 0px)
-    }
+::-webkit-scrollbar-thumb {
+    background: #2563eb; 
+    border-radius: 6px;
 }
 
 .scroll {
